<resources>
    <string name="app_name">SimpleTrack</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="resetConfirmation">Are you sure you want to delete all your data?</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <!--navbar-->
    <string name="home">Home</string>
    <string name="timer">Timer</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="lang_selection">Language</string>
    <string name="time">-- : -- : --</string>
    <string name="export">Export</string>
    <string name="reset">Reset</string>

    <string name="Title">Edit</string>
    <string name="EnterText">Enter Text</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="customTask">Your Taskname</string>
    <string name="pause">Pause</string>
    <string name="pause_popup">Pauses</string>
    <string name="Continue">Continue</string>
    <string name="Delete">Delete</string>
    <string name="Close">Close</string>
    <string name="SelectLanguage">Select language: </string>

    <string-array name="TaskTypes">
        <item>Work</item>
        <item>Meeting</item>
        <item>Break</item>
        <item>Sport</item>
        <item>Party</item>
        <item>other..</item>
    </string-array>
</resources>